# serial_proxy

./: README.md  pyproject.toml  setup.py
src/serial_proxy/: __init__.py  serial_proxy.py
