[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "serial_proxy"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A proxy for serial communication with logging capabilities"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyserial>=3.5",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/serial_proxy"
"Bug Tracker" = "https://github.com/yourusername/serial_proxy/issues"
