[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "serial_proxy"
version = "0.1.0"
authors = [
  { name="Harper Reed", email="harper@modest.com" },
]
description = "A proxy for serial communication with logging capabilities"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyserial>=3.5",
]

[project.urls]
"Homepage" = "https://github.com/harperreed/serial_proxy"
"Bug Tracker" = "https://github.com/harperreed/serial_proxy/issues"
